# Webcamera-Eye-Tracker

./: .gitignore  Diplomovka.sln  README.md
BioID-FaceDatabase-V1.2/: BioID_1297.eye
Diplomovka/: CMakeLists.txt  Diplomovka.vcxproj  Diplomovka.vcxproj.filters  eyetracker.cpp  inputprocessing.cpp  inputprocessing.h  main.cpp  outputprocessing.cpp  outputprocessing.h  resource.h  results_our_3y.csv  testing.cpp  testing.h  tracking_phase.cpp  tracking_phase.h  train.csv  training.cpp  training.h  training_phase.cpp  training_phase.h
Diplomovka/data/: ann.m  data-features.7z  features.data  meas-output-martin-30-6.csv  meas-output-martin-30.csv  meas-output-martin-6.csv  meas-testing-martin.csv  meas-training-martin.data  output-martin-30-12.csv  output-martin-30.csv  output-martin-6.csv  output-martin-no-hidden.csv  testing-martin - Copy.csv  train.data  training-martin.data
Diplomovka/output/: output.data
feature_test_results/: test_results_steepest_descend.7z  timm2011_norm_0.csv  timm2011_norm_200.csv  timm2011_norm_400.csv  timm2011_norm_500.csv  timm2011_norm_angle_depend.csv  timm_sans_norm.csv
libs/fann/: CPackConfig.cmake  CPackSourceConfig.cmake  fann.pc
test_results/: gray_channel.csv  inten  red_channel.csv  results_timm_4y.csv  test_results.7z  timm2011_norm_100.csv  timm2011_norm_300.csv  timm2011_norm_angle_depend.csv  timm_deggree_constraint_norm.csv  timm_deggree_constraint_sans_norm.csv  us_0.020000_gamma.csv  us_0.640000_gamma.csv  us_0.800000_gamma_.csv  us_0_cycles.csv  us_1.600000_gamma_.csv  us_200_cycles.csv
